Fix example yml config file to pass yaml lint test

--- a/config_example/fuey/config.yml
+++ b/config_example/fuey/config.yml
@@ -3,5 +3,9 @@ title: "My app server"
 logfile: /var/log/fuey.log
 inspections:
   pings:
-    - ['Google DNS', '8.8.8.8']
-    - ['Localhost', '0.0.0.0']
+    - 
+      - 'Google DNS'
+      - '8.8.8.8'
+    - 
+      = 'Localhost'
+      - '0.0.0.0'
