Fix example config and remove sapnwrfc gem from dependency list

--- a/config_example/fuey/config.yml
+++ b/config_example/fuey/config.yml
@@ -7,5 +7,13 @@ inspections:
       - 'Google DNS'
       - '8.8.8.8'
     - 
-      = 'Localhost'
+      - 'Localhost'
       - '0.0.0.0'
+  vpns:
+    -
+      - 'VPN 1'
+      - '71.1.1.1'
+    -
+      - 'VPN 2'
+      - '9.0.1.2'
+  
