--- a/config_example/fuey/config.yml
+++ b/config_example/fuey/config.yml
@@ -1,20 +1,23 @@
 ---
 title: "My app server"
 logfile: /var/log/fuey.log
-inspections:
-  pings:
-    - 
-      - 'Google DNS'
-      - '8.8.8.8'
-    - 
-      - 'Localhost'
-      - '0.0.0.0'
-  vpns:
-    -
-      - 
-        name: 'VPN 1'
-        ip: '71.131.12.15'
-        community: "public"
-        oid: "1.2.9.2.5.3.5.7.111.0.2.0.1.0"
-        version: "v1"
-  
+notifications:
+  -
+    - "ping"
+    - "Fuey::Log"
+  -
+    - "snmpwalk"
+    - "SNMPWalkLogger"
+
+traces:
+  simple_trace:
+      -
+        - ping:
+            name: "Google DNS"
+            ip: "8.8.8.8"
+        - snmpwalk:
+            name: "VPN 1"
+            ip: "70.231.17.13"
+            community: "public"
+            oid: "1.0.9.0.5.9.9.7.121.1.0.1.1.5"
+            version: "v1"
