--- a/config_example/fuey/config.yml
+++ b/config_example/fuey/config.yml
@@ -3,21 +3,16 @@ title: "My app server"
 logfile: /var/log/fuey.log
 notifications:
   -
-    - "ping"
+    - "run.trace"
     - "Fuey::Log"
-  -
-    - "snmpwalk"
-    - "SNMPWalkLogger"
-
 traces:
-  simple_trace:
-      -
-        - ping:
-            name: "Google DNS"
-            ip: "8.8.8.8"
-        - snmpwalk:
-            name: "VPN 1"
-            ip: "70.231.17.13"
-            community: "public"
-            oid: "1.0.9.0.5.9.9.7.121.1.0.1.1.5"
-            version: "v1"
+  two_pings:
+  - Ping:
+      name: Google
+      host: 8.8.8.8
+  - SNMPWalk:
+      name: "VPNTunnel"
+      ip: "98.31.121.10"
+      community: "public"
+      oid: "1.1.0.2.0.1.9.4.131.9.2.7.7.1"
+      version: "v1"  
